--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     # API
     "django-cors-headers==4.7.0",
     "djangorestframework==3.15.2",
+    "djangorestframework-simplejwt==5.5.0",
     "drf-spectacular==0.28.0",
     "drf-standardized-errors==0.14.1",
 ]
